<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">吃咩</string>
    <string name="action_settings">Settings</string>
    <string name="email_lab">邮箱</string>
    <string name="user_lab">用户名</string>
    <string name="psw_lab">密码</string>
    <string name="psw_sec_lab">重复密码</string>
    <string name="register_button">提交注册</string>
    <string name="login_button">登录</string>
    <string name="page_name_reg">注册</string>

</resources>
